@@ -18,7 +18,7 @@
 # by quotes) that should identify the project.
 
 PROJECT_NAME           = metalink
-PROJECT_NUMBER         = 0.3.3
+PROJECT_NUMBER         = 0.3.4
 OUTPUT_DIRECTORY       = doc
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
