@@ -1,16 +1,17 @@
-c87b1f787bf69a82cd185144ecc3f96a  src/metalink.cc
-c09f982a05fcc0df78d8099d0f4d26aa  src/Preprocessor/debug.hh
-a817edefd0c4f9721d6c00fe2a339c03  src/String/String.hh
+fd32c9b666ffa8e245ce924264399e87  src/metalink.cc
+7864f55d9676e71f78c313e183d89b25  src/Preprocessor/os_win.hh
+75a7b408cb5a97fef40f33d1e8dcb8e3  src/Preprocessor/debug.hh
+21e511dc089263fba0186a4b5751215a  src/String/String.hh
 13789f42bb6d9ce9846f12d1f7dbbc8d  src/String/translated.cc
 1638664a1476aeb040f752b437d4a2f5  src/String/String.ih
 1fe65478035d1bbe8337b87768ca58a8  src/String/toUpper.cc
-0ad3cbd09399a7009eadffa75aefbf00  src/Preprocessor/foreach.hh
-f839ece0b3a2e54bda7a6ea8a4971a79  src/Globals/Globals.hh
-e8670a5f719f0c60082eb2451d02cd1f  src/Globals/statics.cc
+3bdbefce257157c5198dc60a334ad035  src/Preprocessor/foreach.hh
+e40a8af2ddbc37798df014b1d5c56b0c  src/Globals/Globals.hh
+1be5785ab290d137c7bcdcf496cd8697  src/Globals/statics.cc
 0cccfb172d2164091e188a1b4d71937a  src/Globals/Globals.ih
 eb908a4f4c389ef33fa0e82a66ab0035  src/Globals/XMLSafe.cc
 7c0d00bcbf928981262360339eb5b7f7  src/Globals/XMLQuotedSafe.cc
-9bcea1bcedd22bba6bf768fa75050198  src/Hash/HashPieces/HashPieces.hh
+b1c05ad855dee1f29c8ad1f36e8e0874  src/Hash/HashPieces/HashPieces.hh
 257b98e9756a2e6d07feb2f95b3c0b49  src/Hash/HashPieces/xml.cc
 7f8e05fab11bea2ad276764d38fe42fd  src/Hash/HashPieces/HashPieces.ih
 e0876e97168f66f62de53d3705512ca5  src/Hash/HashPieces/value.cc
@@ -18,63 +19,63 @@ a73f094982a2c1301e30454f078ff0c4  src/Hash/HashPieces/update.cc
 64957f8ba153b9cfa7e688e8c4e62bde  src/Hash/HashPieces/name.cc
 8d7205c6b9880b94e5118ebc8cc1bc0c  src/Hash/HashPieces/finalize.cc
 9d7059e7d3b3dd71f871be9ac1680e98  src/Hash/HashPieces/HashPieces.cc
-3723061542af37673e2f365b2df186ab  src/Hash/GCrypt/GCrypt.hh
-e2befcec0550744d4b173468eea7ec1b  src/Hash/GCrypt/value.cc
+e80ace1430bf810aab1bb87fe76f0b6b  src/Hash/GCrypt/GCrypt.hh
+2e0ef096cb7a8aa9085a1e5ae6f7c68a  src/Hash/GCrypt/value.cc
 2de649ddbdf15c91619ead4d763ff830  src/Hash/GCrypt/GCrypt.ih
-a128f1d23c1720fbadd198ab8d42959f  src/Hash/GCrypt/update.cc
-649d4ec771b98731aa34754289fa2bcb  src/Hash/GCrypt/name.cc
-e9b9bd13b9c03a61287401b578576284  src/Hash/GCrypt/from.cc
-21f77d48a319a6633c8d82dcde377ade  src/Hash/GCrypt/finalize.cc
-bd5f872197a2e02881b7630054d42cc6  src/Hash/Hash.hh
-7047286214bdb128c779fef4501c79c2  src/Hash/xml.cc
+f6f5ce48ed5a9277319a2cef3c6ac065  src/Hash/GCrypt/update.cc
+507518fb2d700f997346bb5cd543653d  src/Hash/GCrypt/name.cc
+6dda315f4db9269cfcf9fcbc9589d96f  src/Hash/GCrypt/from.cc
+f6222a22a59d52c66ded3b9e1ab588a6  src/Hash/GCrypt/finalize.cc
+d8eeded67ebe8f0dbf35be8b27612114  src/Hash/Hash.hh
+6faf8e5c108d9a32265c2d798eca18ea  src/Hash/xml.cc
 9f45a652e1271a565075ab092157779a  src/Hash/Hash.ih
-b1263bd321484629531215d3b79a1267  src/Hash/HashGNUnet/HashGNUnet.hh
-418776c191d724fac1ba90fda117dda1  src/Hash/HashGNUnet/value.cc
+8df49f09790a07b857eb24ead3f48420  src/Hash/HashGNUnet/HashGNUnet.hh
+a1fb020830a464697356995ba936f539  src/Hash/HashGNUnet/value.cc
 6fd893b12b3a6c0b2651ce08135ff713  src/Hash/HashGNUnet/HashGNUnet.ih
-b03105341a80018e114bc4541254c4d7  src/Hash/HashGNUnet/update.cc
-9249eb3342ee748600c2497645368ac2  src/Hash/HashGNUnet/pushChk.cc
-ca0840f49a2e25a3dd076fa5abd4f08b  src/Hash/HashGNUnet/gnunettisch.cc
-c28aefaa2cdc33dc03cb3488cbd824d1  src/Hash/HashGNUnet/finalize.cc
-bbbe011f919971b4364cdbbfe5fd39e2  src/Hash/HashGNUnet/encryptBlock.cc
-ff8758650b220288dbb6db455d5ec2ae  src/Hash/HashGNUnet/blockKeyAndQuery.cc
-ea7ad47b4b31fc2af3fb1aa07d0a9766  src/Hash/HashGNUnet/blockKey.cc
-01c9b048362db64ef9560bc99e9af668  src/Hash/HashGNUnet/HashGNUnet.cc
-25bd55384d2774c47206e429a4535351  src/Hash/HashSHA512/HashSHA512.hh
-98048b96c192fa074ea38c02b4f7fafe  src/Hash/HashGNUnet/SessionKey/SessionKey.hh
-4a8a20a12635ccf211459f5356388fe2  src/Hash/HashGNUnet/SessionKey/statics.cc
+b6e01546981d4bb48233f641d7e39805  src/Hash/HashGNUnet/update.cc
+8db2d27e3d408a3abb3889c69e995437  src/Hash/HashGNUnet/pushChk.cc
+6e9968af2946d20ee08aa5683c7e1cd9  src/Hash/HashGNUnet/gnunettisch.cc
+9ee75ad409fe1077ae74ae77abe25a8e  src/Hash/HashGNUnet/finalize.cc
+c52224fd532daa2c9d9a9b341e78a753  src/Hash/HashGNUnet/encryptBlock.cc
+2215e561cc91114fb99bef1c8ddadb5b  src/Hash/HashGNUnet/blockKeyAndQuery.cc
+b573c7cbf4530fb3748e5014c629ad9a  src/Hash/HashGNUnet/blockKey.cc
+6b3a393d8fa09693f4ed9f85c2ba2ed0  src/Hash/HashGNUnet/HashGNUnet.cc
+72de36b867b979baa34d318bb4562c31  src/Hash/HashSHA512/HashSHA512.hh
+d3588c8430d6b4d9ec6eca67cd831050  src/Hash/HashGNUnet/SessionKey/SessionKey.hh
+6437fae06fb38f5d04e8eb9cf8c443ac  src/Hash/HashGNUnet/SessionKey/statics.cc
 e7b035a026e9a093f6469388269fb356  src/Hash/HashGNUnet/SessionKey/SessionKey.ih
-60adb8d84a1bb2767b329e15692bd250  src/Hash/HashGNUnet/SessionKey/fromHash.cc
-614a5fe415af1b278885dfac923a2e0c  src/Hash/HashCRC32/HashCRC32.hh
-a430f3273fef95c2951cdd0b88b34766  src/Hash/HashCRC32/from.cc
+184f0e4446e0e856689b56c14d24d227  src/Hash/HashGNUnet/SessionKey/fromHash.cc
+5f5fd70c8afdaf7aba1a9c161dc2afe8  src/Hash/HashCRC32/HashCRC32.hh
+154e3bc9a7acf9a9acafd462e5b24e1e  src/Hash/HashCRC32/from.cc
 37cb8915730b1cbf00deda2953d30a18  src/Hash/HashCRC32/HashCRC32.ih
-bc06645bfe71a5d883011c904531aaf5  src/Hash/HashED2K/HashED2K.hh
-58835b29aa412f7ef9425e24ea6bc063  src/Hash/HashED2K/value.cc
+aa00ea38ad595bc783dcb3b50c8aba16  src/Hash/HashED2K/HashED2K.hh
+35fdef5e09658cb61b016d2add558399  src/Hash/HashED2K/value.cc
 101b25269b578d277545b3fb5aa06155  src/Hash/HashED2K/HashED2K.ih
-0937d6e277357263239ecf703e99dfa1  src/Hash/HashED2K/update.cc
-e87bd67bcc02e6ff5ac06b70eae7b541  src/Hash/HashED2K/finalize.cc
-67afc0b3633601142db0304ef132a5dd  src/Hash/HashMD4/HashMD4.hh
-9ddb3c0f162edabee60c62a1c25515b8  src/HashList/HashList.hh
+64a02891e25648d857420bf15f45ef61  src/Hash/HashED2K/update.cc
+c10cd3bb211c4ad8a489c4e5ba768120  src/Hash/HashED2K/finalize.cc
+85d7eceeb36f928f1b9a13d3a64d6476  src/Hash/HashMD4/HashMD4.hh
+0a614db2153775eb7ce74d8a6b1ee0ba  src/HashList/HashList.hh
 0f2fcdf999bbb9e8aae581e314e28668  src/HashList/update.cc
 b74475862b885ec184682d31f66deea5  src/HashList/HashList.ih
 7c84d5dbcce29767d449cdea5de5fe6e  src/HashList/finalize.cc
 b44b1fed064c76cd95b11d8c6f0616ce  src/HashList/destroyMembers.cc
-fb117439a81f153bad6b495309157d89  src/MD5File/MD5File.hh
+c5a6ee06d9acc172b4d1b8e7c1068e59  src/MD5File/MD5File.hh
 872eddec6e2c57e01a3471408e28c255  src/MD5File/record.cc
 1d3e1c8f31b09a6fe195c3687a100b04  src/MD5File/MD5File.ih
-768c007ae3762bc7d75397b39084935f  src/MetalinkFile/MetalinkFile.hh
+eb8a9d4d51d71cc0ccc299d323bd0c35  src/MetalinkFile/MetalinkFile.hh
 ec37368be90735cb8c21a310b89b64bd  src/MetalinkFile/finalize.cc
 839f9bf1f688ad3cbfa208646d7efd97  src/MetalinkFile/MetalinkFile.ih
 036e2527c0059b4b0efd2eec5bc90874  src/MetalinkFile/addPath.cc
-7767b7d5374555bfe5933cac2586061d  src/MirrorList/MirrorList.hh
-6fa15d416082be9cc8df92dd1837e93f  src/MirrorList/MirrorList.cc
+22b4401513cce5e404ba6f372225e328  src/MirrorList/MirrorList.hh
+463efcac8700f0740e5fe307fa6a06fb  src/MirrorList/MirrorList.cc
 dbeea781013439daf7e006814473b8c5  src/MirrorList/MirrorList.ih
-4daa4eb352446614b96c461b6273b21f  src/Mirror/Mirror.hh
+0fd413cb24aa9fd5b61f2ae381b612b8  src/Mirror/Mirror.hh
 56cd05c9e5c9a40e306bb971fc460ffb  src/Mirror/asXMLWithFile.cc
 6ff7e94a8dc0aa114477ff95a8ca5850  src/Mirror/Mirror.ih
 165adf710a31642461e82293a5f45b42  src/Mirror/Mirror.cc
-f7b433acf15f2f9d1a6b5cb1af185cd3  src/Metalink/Metalink.hh
+1e3dddf5b097e5d9f2b92e16fdfa367d  src/Metalink/Metalink.hh
 cf6b62e7d0773e5666ce5f37705034b2  src/Metalink/from.cc
 4dd36218209f96b40ac4478129ffb997  src/Metalink/Metalink.ih
-e279751b3cb6e4ce8cdba420860287b8  src/Options/Options.hh
-6b8afef3a91ea12699ededa975839a43  src/Options/Options.cc
+f22130d140f21a1d676a31eac5b8facd  src/Options/Options.hh
+6042c220283f7531bbd9935f4340670f  src/Options/Options.cc
 7f66abbed2d02de8a7afd4c38a3e2096  src/Options/Options.ih
