@@ -1,0 +1,269 @@
+<!doctype refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN" [
+
+<!-- Process this file with docbook-to-man to generate an nroff manual
+     page: `docbook-to-man manpage.sgml > manpage.1'.  You may view
+     the manual page with: `docbook-to-man manpage.sgml | nroff -man |
+     less'.  A typical entry in a Makefile or Makefile.am is:
+
+manpage.1: manpage.sgml
+	docbook-to-man $< > $@
+
+
+	The docbook-to-man binary is found in the docbook-to-man package.
+	Please remember that if you create the nroff version in one of the
+	debian/rules file targets (such as build), you will need to include
+	docbook-to-man in your Build-Depends control field.
+
+  -->
+
+  <!-- Fill in your name for FIRSTNAME and SURNAME. -->
+  <!ENTITY dhfirstname "<firstname>A. Bram</firstname>">
+  <!ENTITY dhsurname   "<surname>Neijt</surname>">
+  <!-- Please adjust the date whenever revising the manpage. -->
+  <!ENTITY dhdate      "<date>November  8, 2008</date>">
+  <!-- SECTION should be 1-8, maybe w/ subsection other parameters are
+       allowed: see man(7), man(1). -->
+  <!ENTITY dhsection   "<manvolnum>1</manvolnum>">
+  <!ENTITY dhemail     "<email>bneijt@gmail.com</email>">
+  <!ENTITY dhusername  "A. Bram Neijt">
+  <!ENTITY dhucpackage "<refentrytitle>METALINK</refentrytitle>">
+  <!ENTITY dhpackage   "metalink">
+
+  <!ENTITY debian      "<productname>Debian</productname>">
+  <!ENTITY gnu         "<acronym>GNU</acronym>">
+  <!ENTITY gpl         "&gnu; <acronym>GPL</acronym>">
+]>
+
+<refentry>
+  <refentryinfo>
+    <address>
+      &dhemail;
+    </address>
+    <author>
+      &dhfirstname;
+      &dhsurname;
+    </author>
+    <copyright>
+      <year>2008</year>
+      <holder>&dhusername;</holder>
+    </copyright>
+    &dhdate;
+  </refentryinfo>
+  <refmeta>
+    &dhucpackage;
+
+    &dhsection;
+  </refmeta>
+  <refnamediv>
+    <refname>&dhpackage;</refname>
+
+    <refpurpose>commandline metalink generator</refpurpose>
+  </refnamediv>
+  <refsynopsisdiv>
+    <cmdsynopsis>
+      <command>&dhpackage;</command>
+
+      <arg><option><replaceable>input files</replaceable></option></arg>
+      <arg> &lt; <option><replaceable>mirror list</replaceable></option></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+  <refsect1>
+    <title>DESCRIPTION</title>
+
+    <para>This manual page documents briefly the
+      <command>&dhpackage;</command> command.</para>
+
+    <para>This manual page was written for the &debian; distribution
+      because the original program does not have a manual page.</para>
+
+    <para><command>&dhpackage;</command> allows you to generate metalinks from a list
+    of mirrors and a collection of files. The files are hashed and the resulting
+    metalink is generated on the stdout.</para>
+
+  </refsect1>
+  <refsect1>
+    <title>OPTIONS</title>
+
+    <para>These programs follow the usual &gnu; command line syntax,
+      with long options starting with two dashes (`-').  A summary of
+      options is included below.</para>
+
+    <variablelist>
+      <varlistentry>
+        <term><option>-h</option>
+          <option>--help</option>
+        </term>
+        <listitem>
+          <para>Produce a help message</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--version</option>
+        </term>
+        <listitem>
+          <para>Print out the name and version.</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--md5</option>
+        </term>
+        <listitem>
+          <para>Generate metalink from md5sum file(s).</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--addpath path</option>
+        </term>
+        <listitem>
+          <para>Append a path to the mirrors ('/' is not checked)</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--headerfile arg</option>
+        </term>
+        <listitem>
+          <para>Include file after the root element declaration.</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--nomirrors</option>
+        </term>
+        <listitem>
+          <para>Don't read mirrors from stdin</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--hashlist</option>
+        </term>
+        <listitem>
+          <para>List hashes only (implies nomirrors)</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--desc arg</option>
+        </term>
+        <listitem>
+          <para>Add metalink description</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>-d arg</option>
+        </term>
+        <listitem>
+          <para>Include given digest</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--mindigests</option>
+        </term>
+        <listitem>
+          <para>Include: md5 sha1</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--somedigests</option>
+        </term>
+        <listitem>
+          <para>Include: md5 sha1 ed2k</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option>--alldigests</option>
+        </term>
+        <listitem>
+          <para>Include all possible digests</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option></option>
+        </term>
+        <listitem>
+          <para></para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option></option>
+        </term>
+        <listitem>
+          <para></para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>
+          <option></option>
+        </term>
+        <listitem>
+          <para></para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+    
+    <para>Supported algorithms are (-d options):
+  md4 md5 sha1 sha256 sha384 sha512 rmd160 tiger crc32 ed2k gnunet sha1pieces</para>
+  <para>Mirror lists are single line definitions according to:
+ [location [preference] [type] % ] mirror base url</para>
+  </refsect1>
+  <refsect1>
+    <title>EXAMPLES</title>
+
+    <para>
+    http://example.com/ as a mirror:
+    echo http://example.com | metalink -d md5 -d sha1 *
+    </para><para>
+http://example.com/ as a mirror with preference and location:
+ echo us 10 % http://example.com | metalink -d md5 -d sha1 *
+</para><para>
+
+http://example.com/ as a mirror with preference only:
+ echo 0 10 % http://example.com | metalink -d md5 *
+</para>
+
+  </refsect1>
+  <refsect1>
+    <title>AUTHOR</title>
+
+    <para>This manual page was written by &dhusername; &dhemail; for
+      the &debian; system (but may be used by others).  Permission is
+      granted to copy, distribute and/or modify this document under
+      the terms of the &gnu; General Public License, Version 2 any
+	  later version published by the Free Software Foundation.
+    </para>
+	<para>
+	  On Debian systems, the complete text of the GNU General Public
+	  License can be found in /usr/share/common-licenses/GPL.
+	</para>
+
+  </refsect1>
+</refentry>
+
+<!-- Keep this comment at the end of the file
+Local variables:
+mode: sgml
+sgml-omittag:t
+sgml-shorttag:t
+sgml-minimize-attributes:nil
+sgml-always-quote-attributes:t
+sgml-indent-step:2
+sgml-indent-data:t
+sgml-parent-document:nil
+sgml-default-dtd-file:nil
+sgml-exposed-tags:nil
+sgml-local-catalogs:nil
+sgml-local-ecat-files:nil
+End:
+-->
+
+
