@@ -1,5 +1,5 @@
 ########
-# A-A-P rules generated by ccbuild version 1.5.6
+# A-A-P rules generated by ccbuild version 1.5.7
 # For more information visit: http://ccbuild.sourceforge.net
 #
 # To add extra build information, use Extra(Libs|Include|Define)For<Program basename>
@@ -27,11 +27,11 @@ DefineForMetalink = $?GeneratedDefineForMetalink $?ExtraDefineForMetalink
 
 # Library flags for src/metalink.cc
 GeneratedLibsForMetalink = \
+	"-lgcrypt"
 	"-lglibmm-2.4"
 	"-lgobject-2.0"
 	"-lsigc-2.0"
 	"-lglib-2.0"
-	"-lgcrypt"
 
 LibsForMetalink = $?GeneratedLibsForMetalink $?ExtraIncludeForMetalink
 # Sorted list of used global headers
@@ -54,6 +54,7 @@ GlobalHeadersForMetalink = \
 	"string"
 	"sys/stat.h"
 	"sys/types.h"
+	"typeinfo"
 	"utility"
 	"vector"
 
@@ -69,7 +70,7 @@ $ConfigurationFilenameForMetalink :
 CLEANFILES += $ConfigurationFilenameForMetalink
 
 :program src/metalink
-	{ comment = "ccbuild 1.5.6 generated program recipe for src/metalink.cc"}
+	{ comment = "ccbuild 1.5.7 generated program recipe for src/metalink.cc"}
 	{ var_LIBS = $LibsForMetalink}
 		: 
 	{ var_INCLUDE = $IncludeForMetalink}
